--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "homepage": "https://github.com/Tristanradeka/WebAPI2025#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.3",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "session": "^0.1.0"
   }
 }
